RESOLVED FIXED178845
Assert that no script is executed during style recalc
https://bugs.webkit.org/show_bug.cgi?id=178845
Summary Assert that no script is executed during style recalc
Ryosuke Niwa
Reported 2017-10-25 21:16:10 PDT
Add NoEventDispatchAssertion to Document::updateStyle and Document::updateStyleIfNeeded.
Attachments
Adds assertions (13.74 KB, patch)
2017-10-25 21:56 PDT, Ryosuke Niwa
no flags
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 (673.12 KB, application/zip)
2017-10-25 22:50 PDT, Build Bot
no flags
Reverted inspector change (13.49 KB, patch)
2017-10-25 23:03 PDT, Ryosuke Niwa
no flags
Patch for landing (13.48 KB, patch)
2017-10-25 23:59 PDT, Ryosuke Niwa
no flags
Patch (13.52 KB, patch)
2017-10-28 23:46 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2017-10-25 21:16:25 PDT
Ryosuke Niwa
Comment 2 2017-10-25 21:56:08 PDT
Created attachment 324956 [details] Adds assertions
Build Bot
Comment 3 2017-10-25 21:59:11 PDT
Attachment 324956 [details] did not pass style-queue: ERROR: Source/WebCore/dom/EventDispatcher.cpp:133: Please replace ASSERT_WITH_SECURITY_IMPLICATION() with RELEASE_ASSERT_WITH_SECURITY_IMPLICATION(). [security/assertion] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 4 2017-10-25 22:50:42 PDT
Comment on attachment 324956 [details] Adds assertions Attachment 324956 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/4994171 Number of test failures exceeded the failure limit.
Build Bot
Comment 5 2017-10-25 22:50:43 PDT
Created attachment 324960 [details] Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Ryosuke Niwa
Comment 6 2017-10-25 22:55:13 PDT
mac-wk2 EWS bot is in a really bad shape :(
Ryosuke Niwa
Comment 7 2017-10-25 23:03:30 PDT
Created attachment 324962 [details] Reverted inspector change
Build Bot
Comment 8 2017-10-25 23:06:14 PDT
Attachment 324962 [details] did not pass style-queue: ERROR: Source/WebCore/dom/EventDispatcher.cpp:133: Please replace ASSERT_WITH_SECURITY_IMPLICATION() with RELEASE_ASSERT_WITH_SECURITY_IMPLICATION(). [security/assertion] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 9 2017-10-25 23:21:08 PDT
cool, r=me
Ryosuke Niwa
Comment 10 2017-10-25 23:59:46 PDT
Created attachment 324969 [details] Patch for landing
Ryosuke Niwa
Comment 11 2017-10-26 00:05:01 PDT
Comment on attachment 324969 [details] Patch for landing Wait for EWS first.
Build Bot
Comment 12 2017-10-26 00:06:03 PDT
Attachment 324969 [details] did not pass style-queue: ERROR: Source/WebCore/dom/EventDispatcher.cpp:133: Please replace ASSERT_WITH_SECURITY_IMPLICATION() with RELEASE_ASSERT_WITH_SECURITY_IMPLICATION(). [security/assertion] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 13 2017-10-26 01:46:06 PDT
Comment on attachment 324969 [details] Patch for landing Clearing flags on attachment: 324969 Committed r224011: <https://trac.webkit.org/changeset/224011>
WebKit Commit Bot
Comment 14 2017-10-26 01:46:08 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 15 2017-10-27 14:30:40 PDT
Ryan Haddad
Comment 16 2017-10-27 14:35:20 PDT
Reverted r224011 for reason: xsl LayoutTests hit an assertion added with this change since r223999 was rolled out. Committed r224131: <https://trac.webkit.org/changeset/224131>
Ryosuke Niwa
Comment 17 2017-10-28 23:46:04 PDT
Build Bot
Comment 18 2017-10-28 23:46:55 PDT
Attachment 325283 [details] did not pass style-queue: ERROR: Source/WebCore/dom/EventDispatcher.cpp:133: Please replace ASSERT_WITH_SECURITY_IMPLICATION() with RELEASE_ASSERT_WITH_SECURITY_IMPLICATION(). [security/assertion] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ryosuke Niwa
Comment 19 2017-10-29 02:56:50 PDT
Comment on attachment 325283 [details] Patch Relanding the patch since the flakiness of the tests has been fixed.
WebKit Commit Bot
Comment 20 2017-10-29 03:15:59 PDT
Comment on attachment 325283 [details] Patch Clearing flags on attachment: 325283 Committed r224159: <https://trac.webkit.org/changeset/224159>
WebKit Commit Bot
Comment 21 2017-10-29 03:16:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.